2020-04-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test32-shell-command-dont-erase-buffer):
	Tag it :unstable.

2020-04-14  Mattias Engdegård  <mattiase@acm.org>

	* tramp-archive-tests.el
	(tramp-archive-test19-directory-files-and-attributes):
	* tramp-tests.el (tramp-test19-directory-files-and-attributes):
	Replace ^ and $ with \` and \', respectively.

2020-03-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.3 released.

2020-03-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test10-write-region): Extend test.

2020-02-27  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.2 released.

2020-02-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test29-start-file-process)
	(tramp-test30-make-process): Improve for MS-Windows.

2020-02-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test31-interrupt-process): Remove :unstable tag.

2020-02-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-get-remote-gid): Declare.
	(tramp-test18-file-attributes): Check `file-ownership-preserved-p'
	only if possible.
	(tramp-test30-make-process): Modify test due to *BSD.

2020-02-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test32-shell-command): Set `default-directory'.

2020-02-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test32-shell-command-dont-erase-buffer):
	Fix docstring.

2020-02-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (shell-command-dont-erase-buffer): Declare.
	(tramp-test10-write-region, tramp-test21-file-links): Use function
	symbols.
	(tramp--test-async-shell-command): Don't assume that
	`async-shell-command' returns the process object.
	(tramp-test32-shell-command): Rework `async-shell-command-width' test.
	(tramp-test32-shell-command-dont-erase-buffer): New test.

2020-01-28  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.1 released.
